--- a/css/showcase.css
+++ b/css/showcase.css
@@ -20,9 +20,11 @@ html {
 }
 
 .hero {
-  background-image: url(https://picsum.photos/id/381/1920/1080);
+  background-image: url(https://github.com/warehousemanagement88/warehouse/assets/147298795/dc6fb551-c263-498c-ad97-10df9917298a);
   background: linear-gradient(rgba(31, 44, 108, 0.65), rgba(31, 44, 108, 0.65)),
-    rgba(0, 0, 0, 0.55) url("https://picsum.photos/id/381/1920/1080") no-repeat;
+    rgba(0, 0, 0, 0.55)
+      url("https://github.com/warehousemanagement88/warehouse/assets/147298795/dc6fb551-c263-498c-ad97-10df9917298a")
+      no-repeat;
   background-attachment: fixed;
   background-size: cover;
   color: white;
